🎉 첫 배포 테스트: 페이지 내용 변경

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AWS CodeDeploy 테스트</title>
+    <meta charset="UTF-8">
+    <title>My First Deployment</title>
 </head>
 <body>
-  <h1>Hello, CodeDeploy!</h1>
-  <p>이 페이지는 EC2에 자동 배포된 페이지입니다.</p>
+    <h1>🚀 자동 배포 성공!</h1>
+    <p>지금 보고 있는 이 페이지는 GitHub에서 push한 코드가 EC2로 배포된 것입니다.</p>
 </body>
 </html>
+
