🎉 5 배포 테스트: 페이지 내용 변경

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>🚀 자동 배포 성공!</h1>
-    <p>지금 보고 있는 김동하  이 페이지는 GitHub에서 push한 코드가 EC2로 배포된 것입니다.</p>
+    <p>지금 보고 있는 김동하 4444  이 페이지는 GitHub에서 push한 코드가 EC2로 배포된 것입니다.</p>
 </body>
 </html>
 
